fix: rain animation had wrong positioning

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -4,7 +4,8 @@ header {
   align-items: center;
   margin: auto;
   padding: 8px;
-  width: 1400px;
+  max-width: 1400px;
+  width: 100%;
   height: 40px;
 }
 
@@ -61,5 +62,9 @@ header {
 
 .nav-buttons li button:hover::before {
   transform: scaleX(1);
+}
+
+@media (min-width: 1201px) {
+  
 }
 
