--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -4,7 +4,8 @@
   justify-content: center;
   align-items: center;
   margin: auto;
-  width: 1400px;
+  max-width: 1400px;
+  width: 100%;
   padding: 8px;
   height: calc(100% - 72px); /* prob temp fix */
 }
