--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,6 +28,10 @@ body,
 #anim {
   position: absolute;
   top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: none;
   width: 100%;
   height: 100%;
   margin: 0;
